docs: updated access point documentation

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,7 +2,10 @@
     "java.compile.nullAnalysis.mode": "automatic",
     "java.configuration.updateBuildConfiguration": "interactive",
     "cSpell.words": [
+        "González",
         "gson",
-        "miniscandal"
+        "México",
+        "miniscandal",
+        "Querétaro"
     ]
 }
