--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,7 +36,7 @@ java {
 
 application {
     // Define the main class for the application.
-    mainClass = 'org.example.App'
+    mainClass = 'org.codeprofile.App'
 }
 
 tasks.named('test') {
